tests/res/traits/error_duplicate_init.say
trait Stateful { v; init(v) { this.v = v; } }
type T with Stateful {
    init() {
        Stateful.init(1);
        Stateful.init(2); // error: 'Stateful.init(...)' is called more than once
    }
}
